unpackaged/main/default/objects/narvar__Narvar_Incident__c/narvar__Narvar_Incident__c.object-meta.xml
<CustomObject>
    <description>Records are created from Narvar&#39;s external REST API POST request</description>
    <label>Incident</label>
    <nameField>
        <label>Narvar Incident Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>