unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>narvar__Carrier_Name__c</fullName>
    <description>Name of carrier (i.e., UPS, FedEx)</description>
    <label>Carrier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>