unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Case__c.field-meta.xml
<CustomField>
    <fullName>narvar__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Narvar Incidents</relationshipLabel>
    <relationshipName>Narvar_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>