unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>narvar__Contact_Email__c</fullName>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>