unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>narvar__Contact_Name__c</fullName>
    <description>Name of incident contact</description>
    <label>Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>