unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Contact_Number__c</fullName>
    <description>Phone number of contact</description>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>