unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Custom_Type__c.field-meta.xml
<CustomField>
    <fullName>narvar__Custom_Type__c</fullName>
    <label>Custom Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>