unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>narvar__Delivery_Date__c</fullName>
    <description>Date the item was marked as delivered</description>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>