unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>narvar__Delivery_Status__c</fullName>
    <description>Indicates status of the delivery</description>
    <label>Delivery Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>