unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Incident_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>narvar__Incident_Creation_Date__c</fullName>
    <description>Date incident was created</description>
    <label>Incident Creation Date</label>
    <type>DateTime</type>
</CustomField>