unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Narvar_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Narvar_Incident_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Represents external Id of an incident created from Narvar&#39;s external REST API</description>
    <externalId>true</externalId>
    <label>Narvar Incident Number</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>