unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Order_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Order_Number__c</fullName>
    <description>This field is to store order id from rest callout.</description>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>