unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>narvar__Origin_Name__c</fullName>
    <description>Name of where the incident was recorded</description>
    <label>Origin Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>