unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Origin_Source__c.field-meta.xml
<CustomField>
    <fullName>narvar__Origin_Source__c</fullName>
    <description>Type of source where the incident was originated (i.e., Web)</description>
    <label>Origin Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>