unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Origin_URL__c.field-meta.xml
<CustomField>
    <fullName>narvar__Origin_URL__c</fullName>
    <description>URL where the incident originated</description>
    <label>Origin URL</label>
    <type>Url</type>
</CustomField>