unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Subject__c.field-meta.xml
<CustomField>
    <fullName>narvar__Subject__c</fullName>
    <label>Subject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>