unpackaged/main/default/objects/narvar__Narvar_Incident__c/fields/narvar__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>narvar__Tracking_Number__c</fullName>
    <description>Tracking number associated with the incident</description>
    <label>Tracking Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>