unpackaged/main/default/objects/narvar__Narvar_Incident__c/listViews/narvar__All.listView-meta.xml
<ListView>
    <fullName>narvar__All</fullName>
    <columns>NAME</columns>
    <columns>narvar__Delivery_Status__c</columns>
    <columns>narvar__Subject__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>