unpackaged/main/default/objects/narvar__Narvar_Incident__c/listViews/narvar__All_Incidents.listView-meta.xml
<ListView>
    <fullName>narvar__All_Incidents</fullName>
    <columns>NAME</columns>
    <columns>narvar__Narvar_Incident_Number__c</columns>
    <columns>narvar__Carrier_Name__c</columns>
    <columns>narvar__Delivery_Date__c</columns>
    <columns>narvar__Subject__c</columns>
    <columns>narvar__Case__c</columns>
    <columns>narvar__Contact_Name__c</columns>
    <columns>narvar__Contact_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Incidents</label>
</ListView>